# sheep

./: Dockerfile  LICENSE  README.md  pyproject.toml  readme.txt  requirements.txt  sheep.py
.github/workflows/: publish_testpypi.yaml  test.yaml
sheep/: __init__.py  sheep.py
tests/: test_sheep.py
